syntax = "proto3";

package simulator;

option go_package = "./proto;simulator";

message SenderRegistry {
  map<string, SenderMode> sender_registry = 1;
};

message ReceiverRegistry {
  map<string, string> receiver_registry = 1;
};

message SenderMode {
  string node_id = 1;
  uint32 interval_millisecond = 2;
};